#--------------------------------------------------------------------------
# File and Version Information:
#  $Id$
#
# Description:
#  ChangeLog file for package Detector
#------------------------------------------------------------------------

Package author: Mikhail S. Dubrovin

Please describe any modifications that you made to the package in the
reverse time order.

==============
Tag: V00-04-04
2016-11-22 Mikhail S. Dubrovin
- add fallback support for geometry from DCS
  - AreaDetector - in all geometry methods pass par to self.pyda object
  - PyDetectorAccess - move part of geoaccess to geoaccess_calib, add geoaccess_dcs

Tag: V00-04-03
2016-11-17 Mikhail S. Dubrovin
- add ex_cspad_common_mode.py
- AreaDetector.py
  - pass par/evt in stead of rnum to get constants from calib store
  - improve self doc
- PyDetectorAccess.py - switch to using	cps.CreateForEvtEnv for DCS fallback
	
Tag: V00-04-02
2016-11-14 Christopher O'Grady
- Add new SXR-AIN-01 bld.

Tag: V00-04-01
2016-11-04 Christopher O'Grady
- Add new ControlsCamera area detector to Detector xface

Tag: V00-04-00
2016-10-14 Christopher O'Grady
- rename XCS-BEAMMON-01 bld name to MFX-BEAMMON-01 as per Dan Damiani.

Tag: V00-03-98
2016-10-13 Mikhail S. Dubrovin
- app/det_ndarr_raw_proc - add protection in summary - do not save results for 0 found events.

Tag: V00-03-97
2016-09-07 Mikhail S. Dubrovin
- PyDetectorAccess._shaped_array_ - by cpo request return array as is if its shape differs from config.

Tag: V00-03-96
2016-09-02 Mikhail S. Dubrovin
- PyDetectorAccess._shaped_array_ - fix n-dimensional shape returned by natural geometry to config shape (PSAS-139).

Tag: V00-03-95
2016-09-02 Mikhail S. Dubrovin
- AreaDetector, PyDetectorAccess - retrieve shape from env.configStore() object, and as a fallback from calib store (PSAS-139).
- size and ndim are retrieved from shape in PyDetectorAccess.
- update/fix datasets in examples.
M/A     examples/ex*
M       src/AreaDetector.py
M       src/PyDataAccess.py